--- a/reservation.html
+++ b/reservation.html
@@ -257,10 +257,10 @@
 
             <hr class="footer__hr">
             <div class="footer__copyright">
-                <h2> Copyright &copy;
+<h2> Copyright &copy;
                     <script>
                         document.write(new Date().getFullYear())
-                    </script> Eatiz &nbsp; | &nbsp; Made with love ❤ By <a class="text-danger"
+                    </script> Eatiz | By <a class="text-danger"
                         href="https://domnify.com">Azhar Ahmad</a>
                 </h2>
             </div>
